Render Gameboard to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,20 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="container">
+			<h1>Battleship Game</h1>
+
+			<div class="player-board-container">
+				<h2>Your Board</h2>
+				<div id="player-board" class="game-grid"></div>
+			</div>
+
+			<div class="computer-board-container">
+				<h2>Computer's Board</h2>
+				<div id="computer-board" class="game-grid"></div>
+			</div>
+
+			<div id="message-display"></div>
+		</div>
 	</body>
 </html>
