--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
 	<body>
 		<div class="container">
 			<h1>Battleship</h1>
-			<h2>Human</h2>
-			<div id="human-board"></div>
-			<h2>CPU</h2>
-			<div id="cpu-board"></div>
+			<div class="game-container">
+				<div class="left">
+					<h2>Human</h2>
+					<div id="human-board"></div>
+				</div>
+				<div class="right">
+					<h2>CPU</h2>
+					<div id="cpu-board"></div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
