Add game over screen

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
 					<div id="cpu-board"></div>
 				</div>
 			</div>
+			<div id="game-over" class="hidden">
+				<div class="dialogue"></div>
+			</div>
 		</div>
 	</body>
 </html>
