Add game over screen

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
 				</div>
 			</div>
 			<div id="game-over" class="hidden">
-				<div class="dialogue"></div>
+				<div class="dialogue">
+					<h1>Game Over!</h1>
+					<div id="game-over-message"></div>
+					<button>Play Again?</button>
+				</div>
 			</div>
 		</div>
 	</body>
