Add random ship placement button

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 				<div class="left">
 					<h2>Human</h2>
 					<div id="human-board"></div>
+					<button id="random-place-ship">Place Random</button>
 				</div>
 				<div class="right">
 					<h2>CPU</h2>
